# Feuerwehr-Versorgungs-Helfer-API

./: .dockerignore  .env.dist  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  api.ini  api.py  config.py  db_connection.py  db_utils.py  docker-compose.yml.dist  email_sender.py  gui.ini  gui.py  gunicorn_config.py  manifest.json  publish_release.py  pyproject.toml  requirements.txt  schema.sql  update_version.py  utils.py
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: bandit.yml  codeql.yml  deploy-and-restart-api.yml  docker-image.yml  main.yml  pylint.yml  ruff.yml  tests.yml  update_wiki.yml
docker-init/: schema.sql
installation/systemd/: fvh-api.service  fvh-gui.service
static/css/: style.css
static/logo/: favicon.afdesign  logo.afdesign
templates/: add_user.html  admin_api_user_detail.html  admin_api_user_manage.html  admin_dashboard.html  admin_dashboard.html.futsch  admin_manage_api_users.html  admin_user_modification.html  admin_user_transactions.html  email_friendly_reminder.html  email_friendly_reminder.txt  email_include_footer.html  email_info_responsible_threshold.html  email_info_responsible_threshold.txt  email_info_user_threshold.html  email_negativsaldo_warnung.html  email_negativsaldo_warnung.txt  email_neue_transaktion.html  email_neue_transaktion.txt  email_notify_responsible_on_saldo_reached.html  email_notify_responsible_on_saldo_reached.txt  email_reset_password.html  email_reset_password.txt  email_saldo_null.html  email_saldo_null.txt  email_unknown_token.html  email_unknown_token.txt  email_user_register.html  email_user_register.txt  error.html  login.html  user_add.html  user_info.html  web_admin_api_user_detail.html  web_admin_api_user_manage.html  web_admin_bulk_change.html  web_admin_dashboard.html  web_admin_user_modification.html  web_healthcheck.html  web_include_footer.html  web_include_info_block.html  (+7 more)
tests/: conftest.py  test_api.py  test_gui.py  test_utils.py
